[package]
name = "rust_swapper"
version = "0.1.0"
edition = "2021"

[dependencies]
solana-client = "1.18.3"
solana-sdk = "1.18.3"
bs58 = "0.4"
base64 = "0.21"
bincode = "1.3"
reqwest = { version = "0.11", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
tokio = { version = "1", features = ["full"] }