[package]
name = "rust_swapper"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.37", features = ["full"] }
bs58 = "0.5"
base64 = "0.21"
bincode = "1.3"

solana-sdk = "1.18.14"
solana-transaction-status = "1.18.14"
solana-client = "1.18.14"
spl-token = "4.0.0"
spl-associated-token-account = "2.3.0"
reqwest = { version = "0.11", features = ["json", "gzip", "stream"] }